--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
